# arquivo

./: Cargo.toml  build.rs
proto/arquivo/: arquivo.proto
src/: lib.rs  proto.rs
